--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.2",
     "framer-motion": "^7.6.2",
     "next": "12.3.1",
     "nodemailer": "^6.8.0",
