--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.2",
     "framer-motion": "^7.6.2",
     "next": "12.3.1",
     "nodemailer": "^6.8.0",
