--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.6",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.2",
     "framer-motion": "^7.6.2",
-    "next": "12.3.1",
+    "next": "^13.0.6",
     "nodemailer": "^6.8.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "18.0.25",
     "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.0.6",
     "postcss": "^8.4.18",
     "react-icons": "^4.6.0",
     "tailwindcss": "^3.1.8"
