--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@next/font": "^13.0.6",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.2",
+    "@types/node": "^18.11.11",
     "framer-motion": "^7.6.2",
     "next": "^13.0.6",
     "nodemailer": "^6.8.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
     "@types/react": "18.0.25",
