--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.2",
     "@types/node": "^18.11.11",
+    "clsx": "^1.2.1",
     "framer-motion": "^7.6.2",
     "next": "^13.0.6",
     "nodemailer": "^6.8.0",
